Working Sign In/Out

--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
     <div id="_ipane">
         <div id="_account">
             <div id="out" style="display:none;">
-                <a href="./login">Sign in</a>
+                <a href="./signin">Sign in</a>
             </div>
             <div id="in" style="display:none;">
-                <a href="./account">[username]</a> (<a href="./logout">Sign out</a>)
+                <a id="in_uname" href="./u/uid">[username]</a> (<a href="./signout">Sign out</a>)
             </div>
         </div>
+        <hr>
     </div>
     <footer>
         <p>KingdomMaps, (c) 2016 Liam O'Flynn</p>
