--- a/u/index.html
+++ b/u/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/signin.css" media="screen" title="no title">
   </head>
   <body>
+    <a class="home" href="../"><-- Home</a>
     <p id="err">Loading...</p>
     <div class="main">
         <img src="../img/edit-16.png" alt="Edit" id="edit" style="display:none;" />
