--- a/signin/index.html
+++ b/signin/index.html
@@ -15,7 +15,7 @@
                     Currently Google/Github sign in is supported. There are plans for email/password.
                 </p>
                 <hr>
-                <button type="button" id="goog">Sing in with Google</button>
+                <button type="button" id="goog">Sign in with Google</button>
                 <button type="button" id="git">Sign in with Github</button>
                 <hr>
             </div>
