--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <script src="./js/jscolor.min.js" charset="utf-8"></script>
-    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.25.1/mapbox-gl.js'></script>
-    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.25.1/mapbox-gl.css' rel='stylesheet' />
+    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.27.0/mapbox-gl.js'></script>
+    <script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-draw/v0.16.0/mapbox-gl-draw.js'></script>
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.27.0/mapbox-gl.css' rel='stylesheet' />
+    <link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-draw/v0.16.0/mapbox-gl-draw.css' type='text/css' />
     <meta charset="UTF-8">
     <title>KingdomMaps</title>
     <link rel="stylesheet" href="./css/master.css">
@@ -46,6 +48,8 @@
             <span id="vgov"></span>
             <hr class="inter">
             <span id="vrul"></span>
+            <hr class="inter">
+            <div id="vcha"></div>
         </div>
         <div id="_tools" style="display:none;">
             <button type="button" id="ptadd">Add point</button>
